2004-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-antenna.el (w3m-antenna-sites): Fix mis-implemented
	customizing widgets in Emacs 20.7 through 21.3 and XEmacs.

	* w3m-util.el (widget-default-get): Remove advice.

2004-02-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (widget-default-get): Advise the function to fix a
	bug in Emacs 21.1 through 21.3.

2004-02-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-resume): Fix for checkbox.

2004-02-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-itmedia.el (shimbun-get-headers): Remove newlines in the
	subject.

2004-02-11  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @docbook, @ifdocbook, @ifnotdocbook,
	and @registeredsymbol.

2004-02-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-active-region-or-url-at-point): Move the point
	backward from the end of the active region instead of moving it
	forward, in order to avoid enlarging the region.

2004-02-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-active-region-or-url-at-point): Find a url-like
	string in the region instead of extracting the whole substring
	when the region is active.  Don't use `w3m-url-at-point' for that
	since it doesn't work for all url string.
	(w3m-quit): Delete frames seemingly fast.

2004-02-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-content-start): Improve.
	(shimbun-sankei-content-end): Improve.
	(shimbun-get-headers): Improve regexps.
	(shimbun-clear-contents): Ditto.

2004-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-favicon.el (w3m-favicon-retrieve): Because some broken
	servers provide empty contents as their favicons, check the length
	of the retrieved content, before calling `w3m-favicon-convert'.

2004-02-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el (shimbun-mhonarc-get-subject-value)
	(shimbun-mhonarc-get-from-r13-value): New methods.