@@ -1,3 +1,11 @@
+2004-02-20  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-expand-path-name): Protect expand-file-name from
+	cygwin-mount.el's behavior on Windows.
+
+	* w3m-antenna.el (w3m-about-antenna): Check arrived-time if no
+	last-modified.
+
 2004-02-20  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-antenna.el (w3m-antenna-sites): Fix mis-implemented
